swagger update till cancel booking userside
