# server/Routes/userRoute.js
@@ -24,6 +24,8 @@ router.post('/bookJob',userProtect,userControl.bookJob)
 router.get(`/booking/:id`, userProtect,userControl.bookings)
 router.get("/myBookings",userProtect,userControl.myBookings)
 router.get('/approveEstimate/:id',userProtect,approveEstimate)
+router.post('/decline',userProtect,declineEstimate)
+router.post('/cancelBooking',userProtect,cancelBooking)
 router.post('/payment',userProtect,userControl.onlinePayment)
 router.post('/paymentVerify',userProtect,userControl.verifyPayment)
 router.get('/getContacts',userProtect,userControl.getContacts)
@@ -31,8 +33,6 @@ router.post('/getMessage',userProtect,getMessages)
 router.post('/addMessage',userProtect,addMessage)
 router.post('/addReview',userProtect,createuserReview)
 router.post('/updateReview',userProtect,updateReview)
-router.post('/decline',userProtect,declineEstimate)
-router.post('/cancelBooking',userProtect,cancelBooking)
 router.post('/verifyCancel',userProtect,userControl.verifyCancel)
 router.get('/getAllJobs',userProtect,allJobs)
 router.get('/getvouchers',userProtect,getVouchers)
